--- a/pkg/webui/console/views/device-messages/device-messages.styl
+++ b/pkg/webui/console/views/device-messages/device-messages.styl
@@ -12,9 +12,10 @@
 // See the License for the specific language governing permissions and
 // limitations under the License.
 
-import DeviceMessages from './device-messages'
-import connect from './connect'
+.tabs
+  margin-top: 0
+  margin-bottom: $ls.s
 
-const ConnectedDeviceMessages = connect(DeviceMessages)
-
-export { ConnectedDeviceMessages as default, DeviceMessages }
+  +media-query($bp.s)
+    background: none
+    margin-right: 0
